convertendo de sql server para postgresql

--- a/R2D2/R2D2/appsettings.Development.json
+++ b/R2D2/R2D2/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": {
-    "db": "Server=localhost;Database=local-r2d2;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  "ConnectionStrings": {    
+    "db": "Host=localhost; Database=local-r2d2; Username=postgres; Password=mm"
   },
   "Logging": {
     "LogLevel": {
