--- a/R2D2/R2D2.Client/R2D2.Client.csproj
+++ b/R2D2/R2D2.Client/R2D2.Client.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Dominio\Dominio.csproj" />
+    <ProjectReference Include="..\..\Dominio\ZDominio.csproj" />
   </ItemGroup>
 
 </Project>
