--- a/R2D2/R2D2/R2D2.csproj
+++ b/R2D2/R2D2/R2D2.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Dominio\Dominio\Dominio.csproj" />
+    <ProjectReference Include="..\..\Dominio\Dominio.csproj" />
     <ProjectReference Include="..\R2D2.Client\R2D2.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.2" />
